@@ -25,7 +25,7 @@ pfround(x, digits)
 
 
 \author{Andrew Gelman \email{gelman@stat.columbia.edu}; 
-        Yu-Sung Su \email{ys463@columbia.edu}
+        Yu-Sung Su \email{suyusung@tsinghua.edu.cn}
         }
 
 \seealso{
