@@ -31,7 +31,7 @@ sigma.hat(object,\dots)
 }
 
 \author{Andrew Gelman \email{gelman@stat.columbia.edu};
-        Yu-Sung Su \email{ys463@columbia.edu}
+        Yu-Sung Su \email{suyusung@tsinghua.edu.cn}
     }
 
 \seealso{\code{\link{display}},
