@@ -36,7 +36,7 @@ in the chain, with a separate plot per variable.
 
 \author{ 
   Masanao Yajima \email{yajima@stat.columbia.edu}.
-  Yu-Sung Su \email{ys463@columbia.edu}
+  Yu-Sung Su \email{suyusung@tsinghua.edu.cn}
 }
 
 \seealso{
