@@ -1,3 +1,7 @@
+2011-02-05 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
+   * DESCRIPTION (Version, Date): 1.4-01
+   * R/load.first: lib --> lib.loc in packageDescription
+
 2010-11-20 Yu-Sung Su     <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 1.3-08
     * R/simmer: samples directly from the posterior 
